# couchbase-lite-core

./: .clang-format  .clang-format-ignore  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .issuetracker  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile  README.md  antora.yml  build-interop-ios-fat.sh  release-notes.md  run-clang-format.sh  snej-format.sh  snej.clangformat  stripopts
C/tests/: CMakeLists.txt  CoreMLPredictiveModel.hh  CoreMLPredictiveModel.mm  c4AllDocsPerformanceTest.cc  c4ArrayIndexTest.cc  c4BlobStoreTest.cc  c4CertificateTest.cc  c4CollectionTest.cc  c4CppUtils.hh  c4DatabaseEncryptionTest.cc  c4DatabaseInternal.cc  c4DatabaseInternalTest.cc  c4DatabaseTest.cc  c4DocumentTest.cc  c4GeoTest.cc  c4IndexUpdaterTest.cc  c4KeyTest.cc  c4N1QLParserTest.cc  c4ObserverTest.cc  c4PerfTest.cc  c4PredictiveQueryTest+CoreML.mm  c4QueryTest.cc  c4QueryTest.hh  c4Test.cc  c4Test.hh  c4ThreadingTest.cc  c4ViewTest.cc
Java/: .gitignore  CBForestJNI.exp  CBLCoreJNI.exp  CMakeLists.txt  LiteCoreJNI.exp  build.sh  jni.h
Java/build_cmake/: build.sh
Java/jni/: logging.h  native_allocslice.cc  native_c4.cc  native_c4base.cc  native_c4blobstore.cc  native_c4database.cc  native_c4docenumerator.cc  native_c4document.cc  native_c4fulltextmatch.cc  native_c4observer.cc  native_c4prediction.cc  native_c4query.cc  native_c4queryenumerator.cc  native_c4rawdocument.cc  native_c4replicator.cc  native_c4socket.cc  native_database.cc  native_document.cc  native_documentiterator.cc  native_encoder.cc  native_fleece.cc  native_flencoder.cc  native_glue.cc  native_glue.hh  native_indexer.cc  native_marray.cc  native_mcollection.cc  native_mcontext.cc  native_mdict.cc  native_mdictiterator.cc  native_mroot.cc  native_mutable.hh  native_mvalue.cc  native_queryIterator.cc  native_view.cc
LiteCore/tests/: ActorTest.cc  ArrayQueryTest.cc  AsyncTest.cc  CASRevisionStoreTest.cc  CMakeLists.txt  CollatableTest.cc  DataFileTest.cc  DatabaseTest.cc  DocumentKeysTest.cc  FTSTest.cc  GeoHashTest.cc  GeoIndexTest.cc  IndexTest.cc  LazyVectorAPITest.cc  LazyVectorQueryTest.cc  LiteCoreTest.cc  LiteCoreTest.hh  LogEncoderTest.cc  LogObserverTest.cc  LogObserverTest.hh  MapReduceTest.cc  N1QLParserTest.cc  NuDocumentTest.cc  PredictiveQueryTest.cc  PredictiveVectorQueryTest.cc  QueryParserTest.cc  QueryParserTest.hh  QueryTest.cc  QueryTest.hh  QueryTranslatorTest.cc  QueryTranslatorTest.hh  ResultTest.cc  RevTreeTest.cc  RevisionStoreTest.cc  RevisionTest.cc  SQLiteFunctionsTest.cc  SequenceSetTest.cc  SequenceTrackerTest.cc  TestUtils.cc  TestUtils.hh  (+10 more)
Networking/BLIP/: .gitmodules  BLIP.hh  BLIPConnection.cc  BLIPConnection.hh  BLIPInternal.hh  BLIPProtocol.hh  CMakeLists.txt  LoopbackProvider.hh  Message.cc  Message.hh  MessageBuilder.cc  MessageBuilder.hh  MessageOut.cc  MessageOut.hh  MockProvider.hh  README.md
REST/: CMakeLists.txt  CertRequest.cc  CertRequest.hh  DatabasePool.cc  DatabasePool.hh  DatabaseRegistry.cc  DatabaseRegistry.hh  HTTPListener.cc  HTTPListener.hh  Listener+Handlers.cc  Listener+Replicate.cc  Listener.cc  Listener.hh  LiteCoreServ.cc  MIMEType.hh  RESTListener+Changes.cc  RESTListener+Handlers.cc  RESTListener+Replicate.cc  RESTListener.cc  RESTListener.hh  REST_CAPI.cc  Request.cc  Request.hh  Response.cc  Response.hh  Server.cc  Server.hh  SyncListener.hh  c4Listener+RESTFactory.cc  c4Listener.cc  c4ListenerInternal.hh  c4Listener_CAPI.cc  c4REST.def  c4REST.exp  c4REST.h  civetUtils.cc  civetUtils.hh  civetweb.pch  netUtils.cc  netUtils.hh
REST/EE/: CivetC4Socket_stub.cc  RESTSyncListener_stub.cc  SyncListener_stub.cc
REST/tests/: CertHelper.hh  ListenerHarness.hh  ListenerTest.cc  RESTClientTest.cc  RESTListenerTest.cc  SyncListenerTest.cc
Replicator/: Address.cc  Address.hh  C4IncomingReplicator.h  CMakeLists.txt  ChangesFeed.cc  ChangesFeed.hh  Checkpoint.cc  Checkpoint.hh  Checkpointer.cc  Checkpointer.hh  CivetWebSocket.cc  CivetWebSocket.hh  CookieStore.cc  CookieStore.hh  DBAccess.cc  DBAccess.hh  DBActor.cc  DBActor.hh  DBWorker+Pull.cc  DBWorker+Push.cc  DBWorker.cc  DBWorker.hh  DatabaseCookies.cc  DatabaseCookies.hh  EchoCanceler.hh  IncomingBlob.cc  IncomingBlob.hh  IncomingRev+Blobs.cc  IncomingRev.cc  IncomingRev.hh  Inserter.cc  Inserter.hh  LWSContext.cc  LWSContext.hh  LWSHTTPClient.cc  LWSHTTPClient.hh  LWSProtocol.cc  LWSProtocol.hh  LWSResponder.cc  LWSResponder.hh  (+55 more)
Replicator/ConnectedClient/: ConnectedClient.cc  ConnectedClient.hh  QueryServer.cc  QueryServer.hh
Replicator/Obj-C/: CBLHTTPLogic.m  CBLWebSocket.mm
Replicator/tests/: CertificateTest.cc  ConnectedClientTest.cc  ConnectedClientTest.hh  CookieStoreTest.cc  DBAccessTestWrapper.cc  DBAccessTestWrapper.hh  ParsedSequenceIDTest.cc  PropertyEncryptionTests.cc  ReplParams.cc  ReplParams.hh  ReplicatorAPITest.cc  ReplicatorAPITest.hh  ReplicatorCollectionSGTest.cc  ReplicatorCollectionSGTest.hh  ReplicatorCollectionTest.cc  ReplicatorLoopbackTest.cc  ReplicatorLoopbackTest.hh  ReplicatorSG30Test.cc  ReplicatorSG30Test.hh  ReplicatorSGTest.cc  ReplicatorSGTest.hh  ReplicatorTest.cc  ReplicatorVVUpgradeTest.cc  ReplicatorWalrusTest.cc  SG.cc  SG.hh  SGConnection.hh  SGRest.cc  SGRest.hh  SGTestUser.cc  SGTestUser.hh
jenkins/: CBDeps.cmake  CMakeLists.txt  ParseArguments.cmake  build_server_android.sh  build_server_ios.sh  build_server_unix.sh  build_server_win.ps1  couchbase-lite-core-black-duck-manifest.yaml  jenkins_android.sh  jenkins_ios.sh  jenkins_macos.sh  jenkins_unix.sh  jenkins_uwp.ps1  jenkins_win.ps1  manifest.cmake  run_valgrind.sh
tool_support/: ArgumentTokenizer.cc  ArgumentTokenizer.hh  CMakeLists.txt  LiteCoreTool.cc  LiteCoreTool.hh  README.md  Tool.cc  Tool.hh
tools/: ArgumentTokenizer.cc  ArgumentTokenizer.hh  CMakeLists.txt  README.md  Tool.cc  Tool.hh  ToolUtils.cc  ToolUtils.hh  litecorelog.cc
tools/cblite/: cbliteTool+cat.cc  cbliteTool+cp.cc  cbliteTool+file.cc  cbliteTool+logcat.cc  cbliteTool+ls.cc  cbliteTool+put.cc  cbliteTool+query.cc  cbliteTool+revs.cc  cbliteTool+serve.cc  cbliteTool+sql.cc  cbliteTool.cc  (+1 more)
(+2198 files in other folders)
